refactor(core): modernize code with enhanced readability improvements
- Replaced `.get(0)` and similar calls with `.getFirst()` for better clarity and intent.
- Converted multiple `switch` statements to `switch` expressions.
- Added `@NotNull` annotations where applicable for better null-safety.
- Simplified lambda and stream expressions to improve conciseness.
- Replaced redundant method calls like `.equals("")` with `.isEmpty()` for consistency.